--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lisk-inspector",
   "version": "0.1.0",
-  "description": "Keep track of validator performance and statistics 🔍",
+  "description": "Keep track of validator performance and statistics over time 🔍",
   "scripts": {
     "build": "rimraf ./dist && tsc",
     "start": "node ./dist/index.js",
@@ -18,6 +18,7 @@
   "dependencies": {
     "app-root-path": "^3.1.0",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "figlet": "^1.7.0",
     "winston": "^3.11.0"
