--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "rimraf ./dist && tsc",
     "start": "node ./dist/index.js",
+    "pm2": "pm2 start npm --name \"lisk-inspector\" -- run start",
     "dev": "NODE_ENV=development ts-node ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
