--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
 LS_NODE=https://mainnet-service.lemii.dev/api/v3
-OUTPUT_FILENAME=validator-data.json
-SNAPSHOTS_FILENAME=snapshots.json
+DB_FILE_NAME=data.db
