--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
     "app-root-path": "^3.1.0",
     "axios": "^1.6.2",
     "better-sqlite3": "^9.2.2",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "figlet": "^1.7.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.8",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-rate-limit": "^6.0.0",
     "@types/figlet": "^1.5.8",
     "@types/node": "^20.10.4",
     "rimraf": "^5.0.5",
